--- a/app/theme/global.css
+++ b/app/theme/global.css
@@ -49,6 +49,7 @@
 :global(.btn) {
   color: #fff;
   font-size: 14px;
+  font-family: inherit;
   display: flex;
   justify-content: center;
   flex-shrink: 0;
@@ -64,7 +65,8 @@
   z-index: 1;
   height: 40px;
   line-height: 40px;
-  width: 120px;
+  min-width: 120px;
+  width: auto;
   border-radius: var(--borderRadius);
 }
 
@@ -89,6 +91,19 @@
   &:hover {
     background-color: transparent;
     color: var(--primary);
+    border-color: var(--primary);
+  }
+}
+
+:global(.btn--white) {
+  background-color: #fff;
+  color: #121212;
+  border: 2px solid transparent;
+  border-radius: var(--borderRadius);
+
+  &:hover {
+    background-color: var(--primary);
+    color: #fff;
     border-color: var(--primary);
   }
 }
@@ -188,13 +203,27 @@
   width: 400px !important;
 }
 
+:global(.fade-appear),
+:global(.fade-enter) {
+  opacity: 0;
+}
+
+:global(.fade-appear-done),
+:global(.fade-enter.fade-enter-active) {
+  opacity: 1;
+  transition: opacity 500ms var(--cubic1);
+}
+
+:global(.fade-exit-active) {
+  opacity: 0.5;
+  transition: opacity 200ms var(--cubic2);
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
-
 
 ul, li {
   list-style-type: none;
