--- a/app/components/common/radioCheckbox/styles.css
+++ b/app/components/common/radioCheckbox/styles.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-  composes: title from '../dropdown/styles.css';
+  composes: title from '../Dropdown/styles.css';
   white-space: nowrap;
 }
 
