--- a/app/theme/grid.css
+++ b/app/theme/grid.css
@@ -11,6 +11,12 @@
 	flex-direction: column;
 }
 
+.centerCol {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .col50 {
   display: flex;
   flex-direction: column;
@@ -26,6 +32,12 @@
 .justifyContentCenter {
   display: flex;
   justify-content: center;
+}
+
+.flexBetween {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .mAuto {
@@ -59,4 +71,7 @@
 	.container {
 		max-width: 1200px;
 	}
+  .col50 {
+    max-width: 370px;
+  }
 }
