--- a/app/theme/vars.css
+++ b/app/theme/vars.css
@@ -1,13 +1,16 @@
 :root {
   --default: "ChivoRegular", sans-serif;
+  //--grey: #f9fafb;
+  --grey: #f2f5fa;
   --inputBorderColor: #dfe0e3;
   --color: #9c4c99;
+  --blue: #3b2a7b;
   --primary: #59c59f;
   --accent: #f44a65;
   --textColor: #898a95;
   --title: #616372;
   --headerBg: #fef3f5;
-  --lightBg: #f3faf9;
+  --lightBg: #2099e7;
   --borderRadius: 20px;
   --shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.1);
   --cubic1: cubic-bezier(0.15, 0.045, .48, 0.38);
