--- a/app/components/layout/SidebarStatistics/styles.css
+++ b/app/components/layout/SidebarStatistics/styles.css
@@ -3,12 +3,12 @@
   border-radius: var(--borderRadius);
   padding: 20px;
   flex-direction: column;
+}
 
-  & > *:last-child {
-    padding-top: 15px;
-    margin-top: 15px;
-    border-top: 1px dashed var(--textColor);
-  }
+.borderTop {
+  padding-top: 15px;
+  margin-top: 15px;
+  border-top: 1px dashed var(--textColor);
 }
 
 .caption {
@@ -63,4 +63,19 @@
 
 .totalText {
   font-size: 14px;
+}
+
+.actionBtn {
+  margin: 15px auto 0 auto;
+  padding: 0 10px;
+  font-size: 12px !important;
+}
+
+.message {
+  color: var(--accent);
+  font-size: 12px;
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: 10px 0 0 0;
 }
