--- a/app/components/layout/orderTabs/MessagesTab/styles.css
+++ b/app/components/layout/orderTabs/MessagesTab/styles.css
@@ -111,6 +111,7 @@
       min-height: 20px;
       max-height: 150px;
       overflow: auto;
+      resize: none;
     }
   }
 }
@@ -118,4 +119,11 @@
 .tab {
   display: flex;
   flex-direction: column;
+}
+
+.preloaderWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1 0 auto;
 }
