--- a/app/components/pages/Cabinet/Discounts/styles.css
+++ b/app/components/pages/Cabinet/Discounts/styles.css
@@ -30,6 +30,9 @@
     flex-shrink: 0;
     margin-right: 20px;
   }
+  & > *:last-child {
+    margin-top: 40px;
+  }
 }
 
 .graduateContainer {
@@ -41,18 +44,68 @@
 .graduate {
   height: 3px;
   margin-top: 15px;
-  background-color: var(--accent);
+  background-color: var(--grey);
+  position: relative;
+  z-index: 1;
+  & .bg {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--accent);
+    z-index: 2;
+  }
 }
 
 .flex {
   display: flex;
 }
 
+.col {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 3;
+
+  &:first-child:before {
+    left: 0;
+  }
+  &:last-child:before {
+    left: 100%;
+  }
+
+  &:before {
+    content: '';
+    border-radius: 50%;
+    background-color: var(--accent);
+    width: 10px;
+    height: 10px;
+    display: block;
+    position: absolute;
+    bottom: -27px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+}
+
 .percents {
   font-size: 16px;
   color: var(--blue);
   font-weight: bold;
+}
+
+.between {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.order {
+  font-size: 12px;
+  color: var(--textColor);
+  position: absolute;
+  bottom: -70px;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  white-space: nowrap;
 }
