--- a/app/components/pages/Cabinet/styles.css
+++ b/app/components/pages/Cabinet/styles.css
@@ -64,7 +64,7 @@
 
   @media (--large) {
     flex-direction: row;
-    align-items: normal;
+    align-items: flex-start;
     flex-wrap: nowrap;
     justify-content: space-between;
   }
@@ -173,7 +173,7 @@
       height: 38px;
       flex-shrink: 0;
       margin-right: 10px;
-      background-image: url('../../../images/pdf.png');
+      background-image: url('../../../assets/images/pdf.png');
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
